--- a/prepros.cfg
+++ b/prepros.cfg
@@ -288,6 +288,22 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "50ef0fa9": {
+          "id": "50ef0fa9",
+          "path": "js/main.js",
+          "output": "js/main-dist.js",
+          "name": "main.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
